# tauri2-svelte5-shadcn

./: CHANGES.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml  test-build.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: default.rs  errors.rs
src/lib/: commands.svelte.ts  types.ts
src/lib/components/chat/: ChatList.svelte  MessageInput.svelte  MessageList.svelte  ModelSelector.svelte  StatusIndicator.svelte
src/lib/stores/: chat.svelte.ts
src/tests/: DEPENDENCY_UPDATE_GUIDE.md  README.md  WALKTHROUGH.md  setup.ts
src/tests/integration/: hello-world.test.ts
src/tests/unit/: utils.test.ts
src/tests/unit/runes/: global-state.test.ts  prevent-default.test.ts
src/tests/unit/ui/: button.test.ts  card.test.ts  input.test.ts  lucide-icons.test.ts
