[package]
name = "smolpc-codehelper"
version = "2.0.0"
description = "SmolPC Code Helper - AI-powered coding assistant for students"
authors = ["SmolPC Team"]
license = "MIT"
repository = "SmolPC-2-0/smolpc-codehelper"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.0"
tauri-plugin-opener = "2.0"
thiserror = "2.0.12"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
